crates/rome_console/tests/markup/closing_element_standalone.stderr
error: unexpected closing element
 --> tests/markup/closing_element_standalone.rs:3:11
  |
3 |         </Emphasis>
  |           ^^^^^^^^
